--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<link rel="stylesheet" href="../lb1/assets/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="apple-touch-icon" sizes="180x180" href="../lb1/assets/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../lb1/assets/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../lb1/assets/favicon/favicon-16x16.png">
@@ -21,45 +21,45 @@
 
     <div class="image">
         <div class="pic1">
-            <img width="212" height="212" src="../lb1/assets/image/pic1.bmp" alt="pic">
+            <img width="212" height="212" src="image/pic1.bmp" alt="pic">
         </div>
 
         <div class="pic2">
-            <img width="212" height="212" src="../lb1/assets/image/pic2.gif" alt="pic">
+            <img width="212" height="212" src="image/pic2.gif" alt="pic">
         </div>
 
         <div class="pic3">
-            <img width="212" height="212" src="../lb1/assets/image/pic3" alt="pic">
+            <img width="212" height="212" src="image/pic3" alt="pic">
         </div>
 
         <div class="pic4">
-            <img width="212" height="212" src="../lb1/assets/image/pic4.ico" alt="pic">
+            <img width="212" height="212" src="image/pic4.ico" alt="pic">
         </div>
 
         <div class="pic5">
-            <img width="212" height="212" src="../lb1/assets/image/pic5.jpeg" alt="pic">
+            <img width="212" height="212" src="image/pic5.jpeg" alt="pic">
         </div>
 
         <div class="pic6">
-            <img width="212" height="212" src="../lb1/assets/image/pic6.jpg" alt="pic">
+            <img width="212" height="212" src="image/pic6.jpg" alt="pic">
         </div>
     </div>
 
     <div class="image">
         <div class="pic1">
-            <img width="212" height="212" src="../lb1/assets/image/pic7.png" alt="pic">
+            <img width="212" height="212" src="image/pic7.png" alt="pic">
         </div>
 
         <div class="pic2">
-            <img width="212" height="212" src="../lb1/assets/image/pic8.jps" alt="pic">
+            <img width="212" height="212" src="image/pic8.jps" alt="pic">
         </div>
 
         <div class="pic3">
-            <img width="212" height="212" src="../lb1/assets/image/pic9.svg" alt="pic">
+            <img width="212" height="212" src="image/pic9.svg" alt="pic">
         </div>
 
         <div class="pic4">
-            <img width="212" height="212" src="../lb1/assets/image/pic10.webp" alt="pic">
+            <img width="212" height="212" src="image/pic10.webp" alt="pic">
         </div>
     </div>
 
