--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <div class="block">
-            <a class="btn btn1" href="#glav">Головна</a>
-            <a class="btn btn1" href="#lab">Лабораторні</a>
+            <a class="btn btn1" href="https://Elystairs.github.io">Головна</a>
+            <a class="btn btn1" href="https://Elystairs.github.io/page/page1">Лабораторні</a>
     </div>
 
 
